--- a/_inc/templates/16x9.xml
+++ b/_inc/templates/16x9.xml
@@ -55,15 +55,15 @@ based on:       "Carbon Centered" by Eric Hettervik
    </view>
 
    <view name="detailed,video">
-      <text name="md_lbl_rating, md_lbl_releasedate, md_lbl_developer, md_lbl_publisher, md_lbl_genre, md_lbl_players, md_lbl_lastplayed, md_lbl_playcount, md_rating, md_developer, md_publisher, md_genre, md_players, md_playcount, md_description, md_releasedate, md_lastplayed">
+      <text name="md_lbl_rating, md_lbl_releasedate, md_lbl_developer, md_lbl_publisher, md_lbl_genre, md_lbl_players, md_lbl_lastplayed, md_lbl_playcount, md_developer, md_publisher, md_genre, md_players, md_playcount, md_description">
          <pos>1 1</pos>
       </text>
-      <image name="crt" extra="true">
-         <origin>0.5 0.5</origin>
-         <pos>0.5 0.35</pos>
-         <size>0.3015625 0.425</size>
-         <path>./../images/crt.png</path>
-      </image>
+      <datetime name="md_releasedate,md_lastplayed">
+         <pos>1 1</pos>
+      </datetime>
+      <rating name="md_rating">
+         <pos>1 1</pos>
+      </rating>
       <textlist name="gamelist">
          <pos>0.05 0.558</pos>
          <size>0.9 0.275</size>
@@ -71,17 +71,32 @@ based on:       "Carbon Centered" by Eric Hettervik
    </view>
 
    <view name="detailed">
+      <image name="crt-bezel" extra="true">
+         <origin>0.5 0.5</origin>
+         <pos>0.5 0.35</pos>
+         <size>0.3015625 0.425</size>
+         <path>./../images/crt-bezel.svg</path>
+      </image>
       <image name="md_image">
          <origin>0.5 0.5</origin>
          <pos>0.5 0.35</pos>
          <maxSize>0.25 0.33</maxSize>
       </image>
+      <image name="crt-screen" extra="true">
+         <origin>0.5 0.5</origin>
+         <pos>0.5 0.35</pos>
+         <size>0.3015625 0.425</size>
+         <path>./../images/crt-screen.svg</path>
+      </image>
    </view>
 
    <feature supported="video">
       <view name="video">
-         <image name="crt" extra="true">
-            <path>./../images/crt-video.png</path>
+         <image name="crt-bezel" extra="true">
+            <origin>0.5 0.5</origin>
+            <pos>0.5 0.35</pos>
+            <size>0.3015625 0.425</size>
+            <path>./../images/crt-bezel.svg</path>
          </image>
          <image name="md_image">
             <origin>1 1</origin>
@@ -100,6 +115,35 @@ based on:       "Carbon Centered" by Eric Hettervik
             <default>./../videos/static.mp4</default>
             <showSnapshotNoVideo>false</showSnapshotNoVideo>
             <showSnapshotDelay>false</showSnapshotDelay>
+         </video>
+      </view>
+   </feature>
+
+   <feature supported="z-index">
+      <view name="detailed,video">
+         <image name="crt-bezel" extra="true">
+            <zIndex>4</zIndex>
+         </image>
+         <image name="md_image">
+            <zIndex>3</zIndex>
+         </image>
+         <image name="crt-screen" extra="true">
+            <origin>0.5 0.5</origin>
+            <pos>0.5 0.35</pos>
+            <size>0.3015625 0.425</size>
+            <path>./../images/crt-screen.svg</path>
+            <zIndex>1</zIndex>
+         </image>
+      </view>
+      <view name="video">
+         <image name="md_image">
+            <zIndex>4</zIndex>
+         </image>
+         <image name="crt-bezel" extra="true">
+            <zIndex>3</zIndex>
+         </image>
+         <video name="md_video">
+            <zIndex>2</zIndex>
          </video>
       </view>
    </feature>
