--- a/_inc/templates/16x9.xml
+++ b/_inc/templates/16x9.xml
@@ -10,8 +10,13 @@ based on:       "Carbon Centered" by Eric Hettervik
 <theme>
    <formatVersion>4</formatVersion>
 
-   <view name="system">
-      <image name="system-background" extra="true">
+   <view name="system,basic,detailed,video">
+      <helpsystem name="help">
+         <pos>1 1</pos>
+         <textColor>777777</textColor>
+         <iconColor>77777750</iconColor>
+      </helpsystem>
+      <image name="background" extra="true">
          <origin>0 0</origin>
          <pos>0 0</pos>
          <size>1 1</size>
@@ -20,28 +25,29 @@ based on:       "Carbon Centered" by Eric Hettervik
       </image>
    </view>
 
-   <view name="system,basic,detailed,video">
-      <helpsystem name="help">
-         <textColor>777777</textColor>
-         <iconColor>77777750</iconColor>
-      </helpsystem>
-   </view>
+   <feature supported="carousel">
+      <view name="system">
+         <carousel name="systemcarousel">
+            <type>horizontal</type>
+            <color>1c1c1cdd</color>
+         </carousel>
+         <text name="systemInfo">
+            <backgroundColor>1c1c1cdd</backgroundColor>
+            <color>777777</color>
+            <fontPath>./../fonts/Cabin-Bold-TTF.ttf</fontPath>
+         </text>
+      </view>
+   </feature>
 
    <view name="basic,detailed,video">
-      <image name="background">
-         <origin>0 0</origin>
-         <pos>0 0</pos>
-         <tile>true</tile>
-         <path>./../images/background.png</path>
-      </image>
       <image name="logo">
-         <origin>0.5 0.5</origin>
-         <pos>0.5 0.075</pos>
-         <maxSize>0.25 0.06</maxSize>
+         <origin>0.5 0</origin>
+         <pos>0.5 0.0694444444444444</pos>
+         <maxSize>0.234375 0.0555555555555556</maxSize>
       </image>
       <textlist name="gamelist">
-         <pos>0.1875 0.175</pos>
-         <size>0.625 0.675</size>
+         <pos>0.1875 0.1958333333333333</pos>
+         <size>0.625 0.6944444444444444</size>
          <selectorColor>1c1c1c00</selectorColor>
          <selectedColor>bba358</selectedColor>
          <primaryColor>eaeaea</primaryColor>
@@ -65,27 +71,27 @@ based on:       "Carbon Centered" by Eric Hettervik
          <pos>1 1</pos>
       </rating>
       <textlist name="gamelist">
-         <pos>0.05 0.558</pos>
-         <size>0.9 0.275</size>
+         <pos>0.05 0.575</pos>
+         <size>0.9 0.3277777777777778</size>
       </textlist>
    </view>
 
    <view name="detailed">
       <image name="crt-bezel" extra="true">
          <origin>0.5 0.5</origin>
-         <pos>0.5 0.35</pos>
-         <size>0.3015625 0.425</size>
+         <pos>0.5 0.3666666666666667</pos>
+         <maxSize>0.2671875 0.3638888888888889</maxSize>
          <path>./../images/crt-bezel.svg</path>
       </image>
       <image name="md_image">
          <origin>0.5 0.5</origin>
-         <pos>0.5 0.35</pos>
-         <maxSize>0.25 0.33</maxSize>
+         <pos>0.5 0.3666666666666667</pos>
+         <maxSize>0.25 0.3333333333333333</maxSize>
       </image>
       <image name="crt-screen" extra="true">
          <origin>0.5 0.5</origin>
-         <pos>0.5 0.35</pos>
-         <size>0.3015625 0.425</size>
+         <pos>0.5 0.3666666666666667</pos>
+         <maxSize>0.25 0.3333333333333333</maxSize>
          <path>./../images/crt-screen.svg</path>
       </image>
    </view>
@@ -94,23 +100,24 @@ based on:       "Carbon Centered" by Eric Hettervik
       <view name="video">
          <image name="crt-bezel" extra="true">
             <origin>0.5 0.5</origin>
-            <pos>0.5 0.35</pos>
-            <size>0.3015625 0.425</size>
+            <pos>0.5 0.3666666666666667</pos>
+            <maxSize>0.2671875 0.3638888888888889</maxSize>
             <path>./../images/crt-bezel.svg</path>
          </image>
          <image name="md_image">
             <origin>1 1</origin>
-            <pos>0.64 0.5305555555555556</pos>
+            <pos>0.64 0.55</pos>
             <maxSize>0.1015625 0.1805555555555556</maxSize>
          </image>
          <image name="md_marquee">
-            <origin>0 0</origin>
-            <pos>1 1</pos>
+            <origin>0 1</origin>
+            <pos>0.36328125 0.55</pos>
+            <maxSize>0.1015625 0.1805555555555556</maxSize>
          </image>
          <video name="md_video">
             <origin>0.5 0.5</origin>
-            <pos>0.5 0.35</pos>
-            <maxSize>0.25 0.33</maxSize>
+            <pos>0.5 0.3666666666666667</pos>
+            <maxSize>0.25 0.3333333333333333</maxSize>
             <delay>0.5</delay>
             <default>./../videos/static.mp4</default>
             <showSnapshotNoVideo>false</showSnapshotNoVideo>
@@ -122,28 +129,31 @@ based on:       "Carbon Centered" by Eric Hettervik
    <feature supported="z-index">
       <view name="detailed,video">
          <image name="crt-bezel" extra="true">
-            <zIndex>4</zIndex>
+            <zIndex>100</zIndex>
          </image>
          <image name="md_image">
-            <zIndex>3</zIndex>
+            <zIndex>80</zIndex>
          </image>
          <image name="crt-screen" extra="true">
             <origin>0.5 0.5</origin>
-            <pos>0.5 0.35</pos>
-            <size>0.3015625 0.425</size>
+            <pos>0.5 0.3666666666666667</pos>
+            <maxSize>0.25 0.3333333333333333</maxSize>
             <path>./../images/crt-screen.svg</path>
-            <zIndex>1</zIndex>
+            <zIndex>60</zIndex>
          </image>
       </view>
       <view name="video">
          <image name="md_image">
-            <zIndex>4</zIndex>
+            <zIndex>120</zIndex>
+         </image>
+         <image name="md_marquee">
+            <zIndex>120</zIndex>
          </image>
          <image name="crt-bezel" extra="true">
-            <zIndex>3</zIndex>
+            <zIndex>100</zIndex>
          </image>
          <video name="md_video">
-            <zIndex>2</zIndex>
+            <zIndex>80</zIndex>
          </video>
       </view>
    </feature>
